# weston-ivi-shell

./: Makefile.am  README  configure.ac  patch.sh  weston.ini.in
clients/: .gitignore  Makefile.am  ivi-shell-user-interface.c  simple-egl.c  simple-keyboard-binding.c  simple-shm.c  window.c
data/: COPYING  Makefile.am
ivi-shell/: .gitignore  Makefile.am  README  hmi-controller-homescreen.c  hmi-controller-homescreen.h  hmi-controller.c  hmi-controller.h  input-panel-ivi.c  ivi-layout-export.h  ivi-layout-private.h  ivi-layout-transition.c  ivi-layout-transition.h  ivi-layout.c  ivi-layout.h  ivi-shell-ext.c  ivi-shell-ext.h  ivi-shell-private.h  ivi-shell.c  ivi-shell.h  weston-layout.c  weston-layout.h  weston.ini.in  xdg-shell.c  xdg-shell.h
packaging/: weston-ivi-shell.changes  weston-ivi-shell.spec  weston.ini
protocol/: Makefile.am  hmi-controller.xml  ivi-application.xml  ivi-hmi-controller.xml  ivi-shell-test.xml
src/: Makefile.am  animation.c  compositor-drm.c  compositor-fbdev.c  compositor-rpi.c  compositor-wayland.c  compositor-x11.c  compositor.c  compositor.h  data-device.c  gl-renderer.c  hmi-bmpaccessor.c  hmi-bmpaccessor.h  hmi-client.c  hmi-controller.c  hmi-controller.h  input.c  ivi-shell.c  launcher-util.c  pixman-renderer.c  shell.c  weston-layout.c  weston-layout.h
src/xwayland/: window-manager.c
tests/: ivi-shell-test-client.c  ivi-shell-test.c  ivi-test.h  ivi_layout-internal-test.c  ivi_layout-test-plugin.c  ivi_layout-test.c  weston-tests-env
